[package]
name = "todo"
version = "0.1.0"
authors = ["samlarson <slarson207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"